create: news block added + styles

--- a/index.html
+++ b/index.html
@@ -494,6 +494,299 @@
         <!-- /.container -->
     </section>
     <!-- /.money -->
+    <section class="news">
+        <div class="container news__container">
+            <div class="news__first">
+                <a href="#" class="news__link">
+                    <div class="news__post">
+                        <img src="img/bookmark.svg" alt="Icon: bookmark" class="news__book">
+                        <img src="img/post-one.png" alt="Icon: post image" class="news__post-img">
+                        <div class="news__post-descr post">
+                            <div class="post__type post__type-first">Новости</div>
+                            <div class="post__title">
+                                Новый налоговый режим для фрилансеров — налог на проф. доход
+                            </div>
+                            <div class="post__descr">
+                                Руководитель налоговой заявил, что этот режим “поможет выйти из тени” тем, кто работает неофициально. Разобрались, как работает режим и кому он подходит, а кому нет.
+                            </div>
+                            <div class="post__meta">
+                                <div class="post__meta-date">
+                                    6 августа
+                                </div>
+                                <div class="post__meta-comments">
+                                    <img src="img/comment.svg" alt="Icon: comment" class="post__meta-icon">
+                                    342
+                                </div>
+                                <div class="post__meta-likes">
+                                    <img src="img/like.svg" alt="Icon: like" class="post__meta-icon">
+                                    830
+                                </div>
+                            </div>
+                        </div>
+                        <!-- /.news__post-descr -->
+                    </div>
+                    <!-- /.news__post -->
+                </a>
+                <div class="news__devide"></div>
+                <a href="#" class="news__link">
+                    <div class="news__post">
+                        <img src="img/bookmark-active.svg" alt="Icon: bookmark" class="news__book">
+                        <img src="img/post-two.png" alt="Icon: post image" class="news__post-img">
+                        <div class="news__post-descr post">
+                            <div class="post__type post__type-second">Мнения</div>
+                            <div class="post__title">
+                                Платные курсы — это не быстрый способ выйти на нужный уровень
+                            </div>
+                            <div class="post__descr">
+                                Среди новичков распространено мнение, что если пройти какой-то крутой онлайн-курс, то это решит все проблемы. Но они не берут в расчет, что лучшее обучение — это практика. 
+                            </div>
+                            <div class="post__meta">
+                                <div class="post__meta-date">
+                                    7 октября
+                                </div>
+                                <div class="post__meta-comments post__meta-comments-a">
+                                    <img src="img/comment.svg" alt="Icon: comment" class="post__meta-icon">
+                                    27
+                                </div>
+                                <div class="post__meta-likes">
+                                    <img src="img/like.svg" alt="Icon: like" class="post__meta-icon">
+                                   129
+                                </div>
+                            </div>
+                        </div>
+                        <!-- /.news__post-descr -->
+                    </div>
+                    <!-- /.news__post -->
+                </a>
+                <div class="news__devide"></div>
+                <a href="#" class="news__link">
+                    <div class="news__post">
+                        <img src="img/bookmark.svg" alt="Icon: bookmark" class="news__book">
+                        <img src="img/post-three.png" alt="Icon: post image" class="news__post-img">
+                        <div class="news__post-descr post">
+                            <div class="post__type post__type-third">Горячее</div>
+                            <div class="post__title">
+                                Из-за ограничений стали недоступны серверы Telegram. К чему это может какой-то текст здесь
+                            </div>
+                            <div class="post__descr">
+                                Сегодня мы узнали, что серверы Telegram не доступны на территории России. Разобрались, чем это грозит вам, если ваш бизнес зависит от этого мессенджера. 
+                            </div>
+                            <div class="post__meta">
+                                <div class="post__meta-date">
+                                    12 декабря
+                                </div>
+                                <div class="post__meta-comments post__meta-comments-a">
+                                    <img src="img/comment.svg" alt="Icon: comment" class="post__meta-icon">
+                                    30
+                                </div>
+                                <div class="post__meta-likes">
+                                    <img src="img/like.svg" alt="Icon: like" class="post__meta-icon">
+                                    284
+                                </div>
+                            </div>
+                        </div>
+                        <!-- /.news__post-descr -->
+                    </div>
+                    <!-- /.news__post -->
+                </a>
+                <div class="news__devide"></div>
+                <a href="#" class="news__link">
+                    <div class="news__post">
+                        <img src="img/bookmark.svg" alt="Icon: bookmark" class="news__book">
+                        <img src="img/post-four.png" alt="Icon: post image" class="news__post-img">
+                        <div class="news__post-descr post">
+                            <div class="post__type post__type-forth">Мнения</div>
+                            <div class="post__title">
+                                В вашем портфолио могут быть фейковые проекты, если вы сделали какой-то текст
+                            </div>
+                            <div class="post__descr">
+                                Один из читателей предположил, что если в портфолио положить несуществующий проект, то ничего страшного не произойдет. Он провел эксперимент и потенциальные заказчики... 
+                            </div>
+                            <div class="post__meta">
+                                <div class="post__meta-date">
+                                    20 июля
+                                </div>
+                                <div class="post__meta-comments">
+                                    <img src="img/comment.svg" alt="Icon: comment" class="post__meta-icon">
+                                    102
+                                </div>
+                                <div class="post__meta-likes post__meta-likes-f">
+                                    <img src="img/like.svg" alt="Icon: like" class="post__meta-icon">
+                                    1,293
+                                </div>
+                            </div>
+                        </div>
+                        <!-- /.news__post-descr -->
+                    </div>
+                    <!-- /.news__post -->
+                </a>
+                <div class="news__devide"></div>
+                <a href="#" class="news__link">
+                    <div class="news__post">
+                        <img src="img/bookmark.svg" alt="Icon: bookmark" class="news__book">
+                        <img src="img/post-five.png" alt="Icon: post image" class="news__post-img">
+                        <div class="news__post-descr post">
+                            <div class="post__type post__type-fifth">Горячее</div>
+                            <div class="post__title">
+                                Список стран, куда можно улететь
+                            </div>
+                            <div class="post__descr">
+                                Если вы приняли решение переехать в другую страну, чтобы найти там работу, сначала посмотрите на список стран, который мы подготовили для вас. Внутри важная информация про какие-то страны
+                            </div>
+                            <div class="post__meta">
+                                <div class="post__meta-date">
+                                    22 октября
+                                </div>
+                                <div class="post__meta-comments post__meta-comments-b">
+                                    <img src="img/comment.svg" alt="Icon: comment" class="post__meta-icon">
+                                    5
+                                </div>
+                                <div class="post__meta-likes post__meta-likes-t">
+                                    <img src="img/like.svg" alt="Icon: like" class="post__meta-icon">
+                                   82
+                                </div>
+                            </div>
+                        </div>
+                        <!-- /.news__post-descr -->
+                    </div>
+                    <!-- /.news__post -->
+                </a>
+                <div class="news__devide"></div>
+                <a href="#" class="news__link">
+                    <div class="news__post">
+                        <img src="img/bookmark.svg" alt="Icon: bookmark" class="news__book">
+                        <img src="img/post-six.png" alt="Icon: post image" class="news__post-img">
+                        <div class="news__post-descr post">
+                            <div class="post__type post__type-six">Подборки</div>
+                            <div class="post__title">
+                                Список Youtube каналов для тех, кто только начинает изучать разработку
+                            </div>
+                            <div class="post__descr">
+                                Мы собрали на одной странице кучу ссылок на полезные русскоязычные каналы, посвященные айти. Тут можно найти видеоуроки, лекции и бесплатные курсы. 
+                            </div>
+                            <div class="post__meta">
+                                <div class="post__meta-date">
+                                    26 октября
+                                </div>
+                                <div class="post__meta-comments">
+                                    <img src="img/comment.svg" alt="Icon: comment" class="post__meta-icon">
+                                    101
+                                </div>
+                                <div class="post__meta-likes">
+                                    <img src="img/like.svg" alt="Icon: like" class="post__meta-icon">
+                                    432
+                                </div>
+                            </div>
+                        </div>
+                        <!-- /.news__post-descr -->
+                    </div>
+                    <!-- /.news__post -->
+                </a>
+            </div>
+            <!-- /.news__first -->
+            <div class="news__second seconds">
+                <div class="seconds__heading">
+                    Недавно опубликовано
+                </div>
+                <div class="seconds__devide"></div>
+                <div class="seconds__container">
+                    <div class="seconds__post">
+                        <img src="img/post-small-one.png" alt="Icon: post small" class="seconds__img">
+                        <div class="seconds__descr-block">
+                            <div class="seconds__descr">
+                                Работа на удаленке, как это теперь
+                            </div>
+                            <div class="seconds__time">
+                                15 минут назад
+                            </div>
+                        </div>
+                    </div>
+                    <div class="seconds__devide"></div>
+                    <div class="seconds__post">
+                        <img src="img/post-small-two.png" alt="Icon: post small" class="seconds__img">
+                        <div class="seconds__descr-block">
+                            <div class="seconds__descr">
+                                Для чего нужен Node.js и с чем...
+                            </div>
+                            <div class="seconds__time">
+                                32 минуты назад
+                            </div>
+                        </div>
+                    </div>
+                    <div class="seconds__devide"></div>
+                    <div class="seconds__post">
+                        <img src="img/post-small-three.png" alt="Icon: post small" class="seconds__img">
+                        <div class="seconds__descr-block">
+                            <div class="seconds__descr">
+                                Работа в Google: собеседования и что-то еще
+                            </div>
+                            <div class="seconds__time">
+                                38 минут назад
+                            </div>
+                        </div>
+                    </div>
+                    <div class="seconds__devide"></div>
+                    <div class="seconds__post">
+                        <img src="img/post-small-four.png" alt="Icon: post small" class="seconds__img">
+                        <div class="seconds__descr-block">
+                            <div class="seconds__descr">
+                                Переезд в Нью Йорк для работы по...
+                            </div>
+                            <div class="seconds__time">
+                                53 минуты назад
+                            </div>
+                        </div>
+                    </div>
+                    <div class="seconds__devide"></div>
+                    <div class="seconds__post">
+                        <img src="img/post-small-five.png" alt="Icon: post small" class="seconds__img">
+                        <div class="seconds__descr-block">
+                            <div class="seconds__descr">
+                                Почему родители против того, чтобы что-то еще тут
+                            </div>
+                            <div class="seconds__time">
+                                1 час назад
+                            </div>
+                        </div>
+                    </div>
+                    <div class="seconds__devide"></div>
+                    <div class="seconds__post">
+                        <img src="img/post-small-six.png" alt="Icon: post small" class="seconds__img">
+                        <div class="seconds__descr-block">
+                            <div class="seconds__descr">
+                                Прокрастинация:  побороть отклады вать на потом
+                            </div>
+                            <div class="seconds__time">
+                                1 час назад
+                            </div>
+                        </div>
+                    </div>
+                    <div class="seconds__devide"></div>
+                    <div class="seconds__post">
+                        <img src="img/post-small-seven.png" alt="Icon: post small" class="seconds__img">
+                        <div class="seconds__descr-block">
+                            <div class="seconds__descr">
+                                Правки от заказчика могут быть...
+                            </div>
+                            <div class="seconds__time">
+                                2 часа назад
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- /.seconds__container -->
+                <div class="seconds__devide"></div>
+                <div class="seconds__heading-a">
+                    <a href="#" class="seconds__link">
+                        Read more
+                    </a>
+                </div>
+            </div>
+            <!-- /.news__second -->
+        </div>
+        <!-- /.container -->
+    </section>
+    <!-- /.news -->
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/main.js"></script>
 </body>
