create: newsletter and slider

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.min.css">
     <link rel="stylesheet" href="css/style.css">
+
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
 </head>
 <body>
     <header class="header">
@@ -787,7 +789,150 @@
         <!-- /.container -->
     </section>
     <!-- /.news -->
+    <section class="another">
+        <div class="container another__container">
+            <div class="another__first">
+                <div class="swiper-container">
+                    <!-- Additional required wrapper -->
+                    <div class="swiper-wrapper">
+                        <!-- Slides -->
+                        <div class="swiper-slide first-slide slide">
+                            <span class="slide__cat">Горячее</span>
+                            <img src="img/slide-avatar.png" alt="Icon: avatar" class="slide__avatar">
+                            <span class="slide__name">Оксана Пушкина</span>
+                            <span class="slide__how">Фотограф</span>
+                            <div class="slide__title">
+                                Выбор читателей: где удобнее работать фрилансеру
+                            </div>
+                            <button class="slide__button">
+                                <img src="img/image.svg" alt="Icon: image" class="slide__icon">
+                                Смотреть фото
+                                <span class="slide__button-number">26</span>
+                            </button>
+                        </div>
+                        <div class="swiper-slide second-slide">
+                            <span class="slide__cat">Новости</span>
+                            <img src="img/slide-avatar.png" alt="Icon: avatar" class="slide__avatar">
+                            <span class="slide__name">Анастасия Егорова</span>
+                            <span class="slide__how">Блогер</span>
+                            <div class="slide__title">
+                                Чем мне заняться? Правильно, снять видео. 
+                            </div>
+                            <button class="slide__button">
+                                <img src="img/image.svg" alt="Icon: image" class="slide__icon">
+                                Смотреть фото
+                                <span class="slide__button-number">32</span>
+                            </button>
+                        </div>
+                        <div class="swiper-slide third-slide">
+                            <span class="slide__cat">Горячее</span>
+                            <img src="img/slide-avatar.png" alt="Icon: avatar" class="slide__avatar">
+                            <span class="slide__name">Мария Жукова</span>
+                            <span class="slide__how">Студентка</span>
+                            <div class="slide__title">
+                                Почему я работаю в Нью-Йорке? Мне это нравится!
+                            </div>
+                            <button class="slide__button">
+                                <img src="img/image.svg" alt="Icon: image" class="slide__icon">
+                                Смотреть фото
+                                <span class="slide__button-number">76</span>
+                            </button>
+                        </div>
+                        <div class="swiper-slide forth-slide">
+                            <span class="slide__cat">Подборка</span>
+                            <img src="img/slide-avatar.png" alt="Icon: avatar" class="slide__avatar">
+                            <span class="slide__name">Ирина Петрова</span>
+                            <span class="slide__how">Активистка</span>
+                            <div class="slide__title">
+                                Успех в жизни: работать над собой
+                            </div>
+                            <button class="slide__button">
+                                <img src="img/image.svg" alt="Icon: image" class="slide__icon">
+                                Смотреть фото
+                                <span class="slide__button-number">54</span>
+                            </button>
+                        </div>
+                        <div class="swiper-slide fifth-slide">
+                            <span class="slide__cat">Новости</span>
+                            <img src="img/slide-avatar.png" alt="Icon: avatar" class="slide__avatar">
+                            <span class="slide__name">Александра Икрамова</span>
+                            <span class="slide__how">Путешественник</span>
+                            <div class="slide__title">
+                                Куда ходить в лес: можно в Сибирь или в деревне, а можно и в городе
+                            </div>
+                            <button class="slide__button">
+                                <img src="img/image.svg" alt="Icon: image" class="slide__icon">
+                                Смотреть фото
+                                <span class="slide__button-number">91</span>
+                            </button>
+                        </div>
+                    </div>
+                    <!-- If we need pagination -->
+                    <div class="swiper-pagination"></div>
+                
+                </div>
+            </div>
+            <div class="another__second sec">
+                <div class="sec__cat">Карьера</div>
+                <div class="sec__title">
+                    Вопросы на собеседовании для джуна
+                </div>
+                <div class="sec__descr">
+                    Каверзные и не очень вопросы, которых боятся новички, когда идут на собеседование
+                </div>
+                <button class="sec__button">
+                    Читать далее <img src="img/arrow.svg" alt="Icon: arrow" class="sec__img">
+                </button> <!-- /.sec__button -->
+            </div>
+            <a href="#" class="another__third">
+                <div class="another__six">
+                    <div class="another__six-title">
+                        Зарядка для глаз
+                    </div>
+                    <!-- /.six__title -->
+                    <div class="another__six-descr">
+                        Эти несколько упражнений помогут сохранить зрение. Можно делать их даже если...
+                    </div>
+                    <div class="another__six-date">
+                        15 октября
+                    </div>
+                    <!-- /.six__date -->
+                </div>
+                <!-- /.others__six -->
+            </a>
+            <a href="#" class="another__forth">
+                <div class="another__six">
+                    <div class="another__six-title">
+                        Топ плагинов jQuery
+                    </div>
+                    <!-- /.six__title -->
+                    <div class="another__six-descr">
+                        Какие плагины помогут быстро создать галерею, выпадающие списки или окна
+                    </div>
+                    <div class="another__six-date">
+                        14 октября
+                    </div>
+                    <!-- /.six__date -->
+                </div>
+                <!-- /.others__six -->
+            </a>
+        </div>
+    </section>
+    <!-- /.another -->
+    <section class="newsletter">
+        <div class="container newsletter__container">
+            <div class="newsletter__title">
+                Подпишитесь на нашу рассылку
+            </div>
+            <form action="#" class="newsletter__form">
+                <input type="text" class="newsletter__input" placeholder="Email">
+                <button class="newsletter__button">Подписаться</button>
+            </form>
+        </div>
+        <!-- /.container -->
+    </section>
     <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
