--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
                                 Платные курсы — это не быстрый способ выйти на нужный уровень
                             </div>
                             <div class="post__descr">
-                                Среди новичков распространено мнение, что если пройти какой-то крутой онлайн-курс, то это решит все проблемы. Но они не берут в расчет, что лучшее обучение — это практика. 
+                                Среди новичков распространено мнение, что если пройти <br> какой-то крутой онлайн-курс, то это решит все проблемы. Но они не берут в расчет, что лучшее обучение — это практика. 
                             </div>
                             <div class="post__meta">
                                 <div class="post__meta-date">
@@ -633,17 +633,18 @@
                                 Список стран, куда можно улететь
                             </div>
                             <div class="post__descr">
-                                Если вы приняли решение переехать в другую страну, чтобы найти там работу, сначала посмотрите на список стран, который мы подготовили для вас. Внутри важная информация про какие-то страны
+                                Если вы приняли решение переехать в другую страну, чтобы найти там работу, сначала посмотрите на список стран, который мы подготовили для вас. Внутри важная информация про...
                             </div>
-                            <div class="post__meta">
-                                <div class="post__meta-date">
+                            <br>
+                            <div class="post__meta" >
+                                <div class="post__meta-date" style="margin-top: 5px;">
                                     22 октября
                                 </div>
-                                <div class="post__meta-comments post__meta-comments-b">
+                                <div class="post__meta-comments post__meta-comments-b" style="margin-top: 5px;">
                                     <img src="img/comment.svg" alt="Icon: comment" class="post__meta-icon">
                                     5
                                 </div>
-                                <div class="post__meta-likes post__meta-likes-t">
+                                <div class="post__meta-likes post__meta-likes-t" style="margin-top: 5px;">
                                     <img src="img/like.svg" alt="Icon: like" class="post__meta-icon">
                                    82
                                 </div>
@@ -858,7 +859,7 @@
                             <span class="slide__name">Александра Икрамова</span>
                             <span class="slide__how">Путешественник</span>
                             <div class="slide__title">
-                                Куда ходить в лес: можно в Сибирь или в деревне, а можно и в городе
+                                Куда идти за грибами? Все лучше в лес или в Город?
                             </div>
                             <button class="slide__button">
                                 <img src="img/image.svg" alt="Icon: image" class="slide__icon">
@@ -931,6 +932,111 @@
         </div>
         <!-- /.container -->
     </section>
+    <footer class="footer">
+        <div class="container footer__container ">
+            <div class="footer__devider">
+                <div class="footer__devider-first"></div>
+                <div class="footer__devider-second"></div>
+                <div class="footer__devider-third"></div>
+                <div class="footer__devider-forth"></div>
+                <div class="footer__devider-fifth"></div>
+                <div class="footer__devider-six"></div>
+            </div>
+            <div class="footer__navbar-block">
+                <div class="footer__navbar-element navbar">
+                    <div class="navbar__title">
+                        Новости
+                    </div>
+                    <a href="#" class="navbar__name">Обновления</a>
+                    <a href="#" class="navbar__name">Экспресс</a>
+                    <a href="#" class="navbar__name">Politics</a>
+                    <a href="#" class="navbar__name">Solar Eclipse</a>
+                </div>
+                <div class="footer__navbar-element navbar">
+                    <div class="navbar__title">
+                        Статьи
+                    </div>
+                    <a href="#" class="navbar__name navbar__name-en">HTML</a>
+                    <a href="#" class="navbar__name navbar__name-en">CSS</a>
+                    <a href="#" class="navbar__name navbar__name-en">JavaScript</a>
+                    <a href="#" class="navbar__name navbar__name-en">Web Design</a>
+                </div>
+                <div class="footer__navbar-element navbar">
+                    <div class="navbar__title">
+                        Видеоуроки
+                    </div>
+                    <a href="#" class="navbar__name">Скринкасты</a>
+                    <a href="#" class="navbar__name">Уроки</a>
+                    <a href="#" class="navbar__name">Вебинары</a>
+                </div>
+                <div class="footer__navbar-element navbar">
+                    <div class="navbar__title">
+                        Курсы
+                    </div>
+                    <a href="#" class="navbar__name">Платные интенсивы</a>
+                    <a href="#" class="navbar__name">Бесплатные стримы</a>
+                    <a href="#" class="navbar__name">Мастер-классы</a>
+                    <a href="#" class="navbar__name">Менторство</a>
+                    <a href="#" class="navbar__name">Буткемпы</a>
+                </div>
+                <div class="footer__navbar-element navbar">
+                    <div class="navbar__title">
+                        Информация
+                    </div>
+                    <a href="#" class="navbar__name">Политика данных</a>
+                    <a href="#" class="navbar__name">Оферта сайта</a>
+                    <a href="#" class="navbar__name">Реквизиты</a>
+                    <a href="#" class="navbar__name">Контакты</a>
+                </div>
+                <div class="footer__navbar-element navbar">
+                    <div class="navbar__title">
+                        Категории
+                    </div>
+                    <a href="#" class="navbar__name">Популярное</a>
+                    <a href="#" class="navbar__name">Горячее</a>
+                    <a href="#" class="navbar__name">Подборки</a>
+                    <a href="#" class="navbar__name">Мнения</a>
+                    <a href="#" class="navbar__name">Карьера</a>
+                </div>
+            </div>
+            <div class="footer__devider-another"></div>
+            <div class="footer__wrapper">
+                <div class="footer__links">
+                    <a href="#" class="footer__item-another">
+                        <img src="img/footer-logo.svg" alt="Icon: logo footer" class="footer__logo">
+                    </a>
+                    <a href="#" class="footer__item">Контакты</a>
+                    <a href="#" class="footer__item">Работа у нас</a>
+                    <a href="#" class="footer__item">Реклама</a>
+                    <a href="#" class="footer__item">Обратная связь</a>
+                </div>
+                <div class="footer__rechts">
+                    <a href="https://facebook.com" class="footer__rechts-link" target="_blank">
+                        <img src="img/facebook.svg" alt="Icon: facebook" class="footer__rechts-icon">
+                    </a>
+                    <a href="https://twitter.com" class="footer__rechts-link" target="_blank">
+                        <img src="img/twitter.svg" alt="Icon: twitter" class="footer__rechts-icon">
+                    </a>
+                    <a href="https://youtube.com" class="footer__rechts-link" target="_blank">
+                        <img src="img/youtube.svg" alt="Icon: youtube" class="footer__rechts-icon">
+                    </a>
+                    <a href="https://instagram.com" class="footer__rechts-link" target="_blank">
+                        <img src="img/instagram.svg" alt="Icon: instagram" class="footer__rechts-icon">
+                    </a>
+                </div>
+            </div>
+            <div class="footer__devider-another"></div>
+            <div class="footer__info">
+                <div class="footer__info-one">
+                    Universal — это онлайн издание, в котором мы публикуем полезные материалы о веб разработке: статьи, новости, видеоуроки, подборки, ссылки и курсы. Материалы на сайте бесплатны, но при копировании, указывайте ссылку.
+                </div>
+                <div class="footer__info-two">
+                    &copy; 2020 Universal Magazine
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- /.footer -->
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
