--- a/index.html
+++ b/index.html
@@ -925,9 +925,9 @@
             <div class="newsletter__title">
                 Подпишитесь на нашу рассылку
             </div>
-            <form action="#" class="newsletter__form">
-                <input type="text" class="newsletter__input" placeholder="Email">
-                <button class="newsletter__button">Подписаться</button>
+            <form action="send.php" method="post" class="newsletter__form">
+                <input type="email" name="email" class="newsletter__input" placeholder="Email" required>
+                <button type="submit" class="newsletter__button">Подписаться</button>
             </form>
         </div>
         <!-- /.container -->
@@ -1038,6 +1038,7 @@
     </footer>
     <!-- /.footer -->
     <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/jquery.validate.min.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
 </body>
