--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/style.css">
 
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+    <link rel='shortcut icon' type='image/x-icon' href='./favicon.ico' />
 </head>
 <body>
     <header class="header">
@@ -84,9 +85,11 @@
                     <span class="text-block__first">
                         Javascript
                     </span>
-                    <span class="text-block__second">
-                        Расширение Chrome защищает от атак
-                    </span>
+                    <h2>
+                        <span class="text-block__second">
+                            Расширение Chrome защищает от атак
+                        </span>
+                    </h2>
                     <button class="text-block__third">Читать далее <img src="img/arrow.svg" alt="Icon: arrow" class="text-block__img"></button>
                 </div>
                 <!-- /.hero__left-block-text -->
@@ -171,9 +174,11 @@
         <div class="container themes__container">
             <a href="#" class="themes__link">
                 <div class="themes__post">
-                    <div class="themes__text">
-                        25 способов настроить слайдер 
-                    </div>
+                    <h2>
+                        <span class="themes__text">
+                            25 способов настроить слайдер 
+                        </span>
+                    </h2>
                     <img src="img/themes-one.png" alt="Icon: themes" class="themes__img">
                 </div>
                 <!-- /.themes__post -->
@@ -221,9 +226,11 @@
                             <span class="others__first-header">
                                 Статьи 
                             </span>
-                            <span class="others__first-descr">
-                                Вам предложили работу мечты, но вы не можете... 
-                            </span>
+                            <h2>
+                                <span class="others__first-descr">
+                                    Вам предложили работу мечты, но вы не можете... 
+                                </span>
+                            </h2>
                             <span class="others__first-descr-another">
                                 Как поступить, если хочется пойти на работу мечты, но она находится в другом городе. У вас семья и переезжать вы не готовы. 
                             </span>
@@ -249,9 +256,9 @@
             <a href="#" class="others__links grid-two">
                 <div class="others__second">
                     <div class="others__second-first second-info">
-                        <button class="second-info__button">
+                        <div class="second-info__button">
                             Популярное
-                        </button>
+                        </div>
                         <div class="second-info__text">
                             <span class="second-info__text-one">Web design</span>
                             <div class="second-info__text-two">Где взять реальные проекты для портфолио</div>
@@ -486,9 +493,11 @@
     <!-- /.others -->
     <section class="money">
         <div class="container money__container">
-            <div class="money__text">
-                Расследование недели: сколько зарабатывает веб разработчик в Москве
-            </div>
+            <h2>
+                <span class="money__text">
+                    Расследование недели: сколько зарабатывает веб разработчик в Москве
+                </span>
+            </h2>
             <button class="money__button">
                 Читать статью <img src="img/arrow.svg" alt="Icon: arrow" class="money__img">
             </button> <!-- /.money__button -->
@@ -507,9 +516,11 @@
                     <a href="#" class="news__link">
                         <div class="news__post-descr post">
                             <div class="post__type post__type-first">Новости</div>
-                            <div class="post__title">
-                                Новый налоговый режим для фрилансеров — налог на проф. доход
-                            </div>
+                            <h2>
+                                <span class="post__title">
+                                    Новый налоговый режим для фрилансеров — налог на проф. доход
+                                </span>
+                            </h2>
                             <div class="post__descr">
                                 Руководитель налоговой заявил, что этот режим “поможет выйти из тени” тем, кто работает неофициально.Разобрались, как работает режим и кому он подходит, а кому нет.
                             </div>
@@ -697,7 +708,6 @@
                     </a>
                 </div>
                 <!-- /.news__post -->
-                </a>
             </div>
             <!-- /.news__first -->
             <div class="news__second seconds">
@@ -838,7 +848,7 @@
                                 <span class="slide__button-number">26</span>
                             </button>
                         </div>
-                        <div class="swiper-slide second-slide">
+                        <div class="swiper-slide second-slide slide">
                             <span class="slide__cat">Новости</span>
                             <img src="img/one.jpg" alt="Icon: avatar" class="slide__avatar">
                             <span class="slide__name">Анастасия Егорова</span>
@@ -852,7 +862,7 @@
                                 <span class="slide__button-number">32</span>
                             </button>
                         </div>
-                        <div class="swiper-slide third-slide">
+                        <div class="swiper-slide third-slide slide">
                             <span class="slide__cat">Горячее</span>
                             <img src="img/two.jpg" alt="Icon: avatar" class="slide__avatar">
                             <span class="slide__name">Мария Жукова</span>
@@ -866,7 +876,7 @@
                                 <span class="slide__button-number">76</span>
                             </button>
                         </div>
-                        <div class="swiper-slide forth-slide">
+                        <div class="swiper-slide forth-slide slide">
                             <span class="slide__cat">Подборка</span>
                             <img src="img/three.jpg" alt="Icon: avatar" class="slide__avatar">
                             <span class="slide__name">Ирина Петрова</span>
@@ -880,7 +890,7 @@
                                 <span class="slide__button-number">54</span>
                             </button>
                         </div>
-                        <div class="swiper-slide fifth-slide">
+                        <div class="swiper-slide fifth-slide slide">
                             <span class="slide__cat">Новости</span>
                             <img src="img/four.jpg" alt="Icon: avatar" class="slide__avatar">
                             <span class="slide__name">Александра Икрамова</span>
@@ -902,9 +912,11 @@
             </div>
             <div class="another__second sec">
                 <div class="sec__cat">Карьера</div>
-                <div class="sec__title">
-                    Вопросы на собеседовании для джуна
-                </div>
+                <h2>
+                    <span class="sec__title">
+                        Вопросы на собеседовании для джуна
+                    </span>
+                </h2>
                 <div class="sec__descr">
                     Каверзные и не очень вопросы, которых боятся новички, когда идут на собеседование
                 </div>
@@ -949,9 +961,11 @@
     <!-- /.another -->
     <section class="newsletter">
         <div class="container newsletter__container">
-            <div class="newsletter__title">
-                Подпишитесь на нашу рассылку
-            </div>
+            <h2>
+                <span class="newsletter__title">
+                    Подпишитесь на нашу рассылку
+                </span>
+            </h2>
             <form action="send.php" method="post" class="newsletter__form">
                 <input type="email" name="email" class="newsletter__input" placeholder="Email" required>
                 <button type="submit" class="newsletter__button">Подписаться</button>
@@ -961,25 +975,19 @@
     </section>
     <footer class="footer">
         <div class="container footer__container ">
-            <div class="footer__devider">
-                <div class="footer__devider-first"></div>
-                <div class="footer__devider-second"></div>
-                <div class="footer__devider-third"></div>
-                <div class="footer__devider-forth"></div>
-                <div class="footer__devider-fifth"></div>
-                <div class="footer__devider-six"></div>
-            </div>
             <div class="footer__navbar-block">
-                <div class="footer__navbar-element navbar">
-                    <div class="navbar__title">
-                        Новости
-                    </div>
+                <div class="footer__navbar-element footer__devider-first navbar">
+                    <h2>
+                        <span class="navbar__title">
+                            Новости
+                        </span>
+                    </h2>
                     <a href="#" class="navbar__name">Обновления</a>
                     <a href="#" class="navbar__name">Экспресс</a>
                     <a href="#" class="navbar__name">Politics</a>
                     <a href="#" class="navbar__name">Solar Eclipse</a>
                 </div>
-                <div class="footer__navbar-element navbar">
+                <div class="footer__navbar-element footer__devider-second navbar">
                     <div class="navbar__title">
                         Статьи
                     </div>
@@ -988,7 +996,7 @@
                     <a href="#" class="navbar__name navbar__name-en">JavaScript</a>
                     <a href="#" class="navbar__name navbar__name-en">Web Design</a>
                 </div>
-                <div class="footer__navbar-element navbar">
+                <div class="footer__navbar-element footer__devider-third navbar">
                     <div class="navbar__title">
                         Видеоуроки
                     </div>
@@ -996,7 +1004,7 @@
                     <a href="#" class="navbar__name">Уроки</a>
                     <a href="#" class="navbar__name">Вебинары</a>
                 </div>
-                <div class="footer__navbar-element navbar">
+                <div class="footer__navbar-element footer__devider-forth navbar">
                     <div class="navbar__title">
                         Курсы
                     </div>
@@ -1006,7 +1014,7 @@
                     <a href="#" class="navbar__name">Менторство</a>
                     <a href="#" class="navbar__name">Буткемпы</a>
                 </div>
-                <div class="footer__navbar-element navbar">
+                <div class="footer__navbar-element footer__devider-fifth navbar">
                     <div class="navbar__title">
                         Информация
                     </div>
@@ -1015,7 +1023,7 @@
                     <a href="#" class="navbar__name">Реквизиты</a>
                     <a href="#" class="navbar__name">Контакты</a>
                 </div>
-                <div class="footer__navbar-element navbar">
+                <div class="footer__navbar-element footer__devider-six navbar">
                     <div class="navbar__title">
                         Категории
                     </div>
