adaptive article version

--- a/article.html
+++ b/article.html
@@ -202,7 +202,9 @@
                 </div>
                 <div class="text__slider-meta">
                     <div class="text__slider-meta-one">
-                        Geostatistics deal with quantitative data analysis, specifically the application of statistical methodology
+                        <span class="text__slider-meta-one-one">
+                            Geostatistics deal with quantitative data analysis, specifically the application of statistical methodology
+                        </span>
                     </div>
                     <div class="text__slider-meta-two">
                         <img src="img/article-slide-avatar.svg" class="text__slider-meta-icon" alt="Avatar">
